--- a/.github/workflows/prismaworkflow.yml
+++ b/.github/workflows/prismaworkflow.yml
@@ -1,61 +1,48 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+name: checkov
 
-# A sample workflow that checks for security issues using
-# the Prisma Cloud Infrastructure as Code Scan Action on
-# the IaC files present in the repository.
-# The results are uploaded to GitHub Security Code Scanning
-#
-# For more details on the Action configuration see https://github.com/prisma-cloud-shiftleft/iac-scan-action
-
-name: Prisma Cloud IaC Scan
-
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main", "master" ]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "master" ]
-  schedule:
-    - cron: '45 16 * * 5'
+    branches: [ "main", "master" ]
 
-permissions:
-  contents: read
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  prisma_cloud_iac_scan:
+  # This workflow contains a single job called "scan"
+  scan:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: Run Prisma Cloud IaC Scan to check
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - id: iac-scan
-        name: Run Scan on CFT files in the repository
-        uses: prisma-cloud-shiftleft/iac-scan-action@53278c231c438216d99b463308a3cbed351ba0c3
+      # Checks-out your repository under $GITHUB_WORKSPACE, so follow-up steps can access it
+      - uses: actions/checkout@v3
+
+      - name: Checkov GitHub Action
+        uses: bridgecrewio/checkov-action@v12
         with:
-          # You will need Prisma Cloud API Access Token
-          # More details in https://github.com/prisma-cloud-shiftleft/iac-scan-action
-          prisma_api_url: ${{ secrets.PRISMA_CLOUD_API_URL }}
-          access_key: ${{ secrets.PRISMA_CLOUD_ACCESS_KEY }}
-          secret_key: ${{ secrets.PRISMA_CLOUD_SECRET_KEY }}
-          # Scan sources on Prisma Cloud are uniquely identified by their name
-          asset_name: 'my-asset-name'
-          # The service need to know the type of IaC being scanned
-          template_type: 'CFT'
+          # This will add both a CLI output to the console and create a results.sarif file
+          output_format: cli,sarif
+          output_file_path: console,results.sarif
+        
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
+        
         # Results are generated only on a success or failure
         # this is required since GitHub by default won't run the next step
-        # when the previous one has failed.
-        # And alternative it to add `continue-on-error: true` to the previous step
+        # when the previous one has failed. Security checks that do not pass will 'fail'.
+        # An alternative is to add `continue-on-error: true` to the previous step
+        # Or 'soft_fail: true' to checkov.
         if: success() || failure()
         with:
-          # The SARIF Log file name is configurable on scan action
-          # therefore the file name is best read from the steps output
-          sarif_file: ${{ steps.iac-scan.outputs.iac_scan_result_sarif_path }}
+          sarif_file: results.sarif
